P4PU-851 replaced get(0) with getFirst()