@@ -61,7 +61,7 @@ class GPDConnectorImplTest {
         assertNotNull(result);
         assertEquals(gpdPaymentNoticeDetailsDTOExpected, result);
         assertEquals(1, result.getPaymentOption().size());
-        assertFalse(result.getPaymentOption().get(0).getIsPartialPayment());
+        assertFalse(result.getPaymentOption().getFirst().getIsPartialPayment());
 
     }
 
@@ -77,8 +77,8 @@ class GPDConnectorImplTest {
         assertNotNull(result);
         assertEquals(gpdPaymentNoticeDetailsDTOExpected, result);
         assertEquals(2, result.getPaymentOption().size());
-        assertTrue(result.getPaymentOption().get(0).getIsPartialPayment());
-        assertTrue(result.getPaymentOption().get(1).getIsPartialPayment());
+        assertTrue(result.getPaymentOption().getFirst().getIsPartialPayment());
+        assertTrue(result.getPaymentOption().getLast().getIsPartialPayment());
     }
 
     @Test
@@ -120,13 +120,13 @@ class GPDConnectorImplTest {
         expected.setValidityDate(LocalDateTime.parse("2025-01-28T10:23:51.512312545"));
         expected.setStatus(GPDPaymentNoticeStatus.VALID);
 
-        GPDPaymentOptionPayloadDTO gpdPaymentOptionPayloadDTO = expected.getPaymentOption().get(0);
+        GPDPaymentOptionPayloadDTO gpdPaymentOptionPayloadDTO = expected.getPaymentOption().getFirst();
         gpdPaymentOptionPayloadDTO.setNav("3".concat(gpdPaymentOptionPayloadDTO.getIuv()));
         gpdPaymentOptionPayloadDTO.setFee(0L);
         gpdPaymentOptionPayloadDTO.setNotificationFee(0L);
         gpdPaymentOptionPayloadDTO.setPaymentOptionMetadata(new ArrayList<>());
 
-        GPDTransferPayloadDTO transfer = gpdPaymentOptionPayloadDTO.getTransfer().get(0);
+        GPDTransferPayloadDTO transfer = gpdPaymentOptionPayloadDTO.getTransfer().getFirst();
         transfer.setTransferMetadata(new ArrayList<>());
         gpdPaymentOptionPayloadDTO.setTransfer(List.of(transfer));
         expected.setPaymentOption(List.of(gpdPaymentOptionPayloadDTO));
@@ -138,7 +138,7 @@ class GPDConnectorImplTest {
         assertNotNull(result);
         assertEquals(expected, result);
         assertEquals(1, result.getPaymentOption().size());
-        assertFalse(result.getPaymentOption().get(0).getIsPartialPayment());
+        assertFalse(result.getPaymentOption().getFirst().getIsPartialPayment());
 
     }
 
