@@ -68,7 +68,7 @@ class PullPaymentConnectorImplTest {
         List<PullPaymentNoticeDTO> result = pullPaymentConnector.getPaymentNotices("DUMMY_FISCAL_CODE", LocalDate.now(), 10, 0);
         //then
         Assertions.assertNotNull(result);
-        Assertions.assertEquals(pullPaymentNoticeDTO,result.get(0));
+        Assertions.assertEquals(pullPaymentNoticeDTO,result.getFirst());
 
     }
 
@@ -80,7 +80,7 @@ class PullPaymentConnectorImplTest {
 
         //then
         Assertions.assertEquals(0,result.size());
-        Assertions.assertTrue(memoryAppender.getLoggedEvents().get(0).getFormattedMessage()
+        Assertions.assertTrue(memoryAppender.getLoggedEvents().getFirst().getFormattedMessage()
                 .contains(("A class feign.FeignException$NotFound occurred handling request getPaymentNotices from pull-payment: HttpStatus 404 - [404 Not Found]"))
         );
     }
